feat: 字軌發票申請 init

--- a/eIVOGo/eIVOGo.csproj
+++ b/eIVOGo/eIVOGo.csproj
@@ -1010,6 +1010,7 @@
     <Content Include="Views\DataExchange\Module\ItemListSorting.cshtml" />
     <Content Include="Views\DataExchange\Module\DataItemQuery.cshtml" />
     <Content Include="Views\DataExchange\Module\NewItem.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Create.cshtml" />
     <None Include="Views\Handling\MailTracking\QueryResult.cshtml" />
     <Content Include="MvcHelper\CreateInvoiceSummaryReport.aspx" />
     <Content Include="Published\PrintSingleAllowance.aspx" />
@@ -1545,6 +1546,15 @@
     <Content Include="Views\InvoiceProcess\DataQuery\ItemListSorting.cshtml" />
     <Content Include="Views\Notification\Module\AlertInvoiceNotUpload.cshtml" />
     <Content Include="Views\Notification\NotifyInvoiceNotUpload.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Index.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Apply.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Query.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Set.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Message.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryIndex.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryItemList.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryResult.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddOn\Published\eInvoiceService_201612.asmx.cs">
@@ -1564,6 +1574,7 @@
     <Compile Include="Controllers\HandlingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InquireInvoiceController.cs" />
+    <Compile Include="Controllers\InvoiceNumberApplyController.cs" />
     <Compile Include="Controllers\InvoiceAuditController.cs" />
     <Compile Include="Controllers\InvoiceBusinessController.cs" />
     <Compile Include="Controllers\IndividualProcessController.cs" />
@@ -1572,6 +1583,7 @@
     <Compile Include="Controllers\SAM\SystemExceptionLogController.cs" />
     <Compile Include="Controllers\TrackCodeNo\InvoiceNoController.cs" />
     <Compile Include="Controllers\InvoiceProcessController.cs" />
+    <Compile Include="Controllers\InvoiceXmlServiceController.cs" />
     <Compile Include="Controllers\IssuerController.cs" />
     <Compile Include="Controllers\Merchandise\ProductCatalogController.cs" />
     <Compile Include="Controllers\NotificationController.cs" />
@@ -1598,6 +1610,7 @@
     <Compile Include="Helper\BranchBusinessCounterpartUploadManager.cs" />
     <Compile Include="Helper\BusinessCounterpartXmlUploadManager.cs" />
     <Compile Include="Helper\DataQuery\InvoiceItemQueryExtensions.cs" />
+    <Compile Include="Helper\DateTimeExtensions.cs" />
     <Compile Include="Helper\ExtensionMethods.cs" />
     <Compile Include="Helper\InvoiceBusinessExtensionMethods.cs" />
     <Compile Include="Helper\LoginHandler.cs" />
@@ -1606,12 +1619,19 @@
     <Compile Include="Helper\PortalExtensionMethods.cs" />
     <Compile Include="Helper\QueryExtensionMethods.cs" />
     <Compile Include="Helper\Security\Authorization\UserAuthorizeAttribute.cs" />
+    <Compile Include="Models\DateLessThanAttribute.cs" />
+    <Compile Include="Models\InvoiceNumberApply.cs" />
+    <Compile Include="Models\InvoiceNumberApplyResponse.cs" />
+    <Compile Include="Models\InvoiceNumberApplyService.cs" />
+    <Compile Include="Models\InvoiceNumberApplyWord.cs" />
     <Compile Include="Models\DataItemDefinition.cs" />
     <Compile Include="Models\DataListSource.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Models\InquireField.cs" />
     <Compile Include="Models\InquireOrganization.cs" />
+    <Compile Include="Models\ViewModel\InvoiceNumberApplyQueryViewModel.cs" />
+    <Compile Include="Models\ViewModel\InvoiceNumberApplyViewModel.cs" />
     <Compile Include="Models\ViewModel\LoginViewModel.cs" />
     <Compile Include="Module\Base\CommonInquireEntity.cs">
       <SubType>ASPXCodeBehind</SubType>
@@ -1859,6 +1879,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="resource\InvoiceNumberApply\" />
     <Folder Include="Views\InvoiceService\" />
     <Folder Include="Views\Issuer\" />
     <Folder Include="Views\SystemExceptionLog\" />
